kubernetes/frontendDeployment.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: mein-frontend
#spec:
#  selector:
#    app: mein-frontend
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 80
#  type: ClusterIP
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mein-frontend
  namespace: betterclassroom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mein-frontend
  template:
    metadata:
      labels:
        app: mein-frontend
    spec:
      containers:
        - name: mein-frontend
          image: registry.gitlab.in.htwg-konstanz.de/lehre/meiglspe/sose24/betterclassroom/frontend:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: my-registry-secret
