kubernetes/backendDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mein-backend
  namespace: betterclassroom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mein-backend
  template:
    metadata:
      labels:
        app: mein-backend
    spec:
      containers:
        - name: mein-backend
          image: registry.gitlab.in.htwg-konstanz.de/lehre/meiglspe/sose24/betterclassroom/backend:main #TODO: set to current branch name
          #image: registry.gitlab.in.htwg-konstanz.de/lehre/meiglspe/sose24/betterclassroom/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: my-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: mein-backend
  namespace: betterclassroom
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: mein-backend
