kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: betterclassroom
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: betterclassroom-spa-fallback@kubernetescrd
spec:
  rules:
    # host name should be replaced by flux substitution e.g. ${domain:=better-classroom.com}
    - host: betterclassroom-cluster.in.htwg-konstanz.de
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mein-frontend
                port:
                  number: 80
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: mein-backend
                port:
                  number: 5000
    - host: better-classroom.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mein-frontend
                port:
                  number: 80
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: mein-backend
                port:
                  number: 5000
